[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[[bin]]
name = "{{project-name}}-server"
path = "src/server.rs"

[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
prost-types = "0.8"
tokio-stream = "0.1"
async-stream = "0.2"
fern = { version = "0.6.0", features = ["syslog-4", "colored"] }
syslog = "^4.0.1"
log = "0.4"
chrono = "0.4.19"

[build-dependencies]
tonic-build = "0.5"