[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[[bin]]
name = "{{project-name}}-server"
path = "src/server.rs"

[dependencies]
tonic = "0.5.2"
prost = "0.8.0"
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
rand = "0.8.4"
prost-types = "0.8.0"
tokio-stream = "0.1.7"
async-stream = "0.3.2"
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
chrono = "0.4.19"

[build-dependencies]
tonic-build = "0.5.2"